@@ -75,9 +75,22 @@ Boots the <quote>bf2.4</quote> flavor.
   <title>Booting from Windows</title>
 <para>
 
-To start the installer from Windows, you must first obtain CD-ROM/DVD-ROM
-or USB memory stick installation media as described in
-<xref linkend="official-cdrom"/> and <xref linkend="boot-usb-files"/>.
+To start the installer from Windows, you can either
+
+<itemizedlist>
+<listitem><para>
+
+obtain CD-ROM/DVD-ROM or USB memory stick installation media as described in
+<xref linkend="official-cdrom"/> and <xref linkend="boot-usb-files"/>, or
+
+</para></listitem>
+<listitem><para>
+
+download a standalone Windows executable, which is available as
+tools/win32-loader/stable/win32-loader.exe on the &debian; mirrors,
+
+</para></listitem>
+</itemizedlist>
 
 </para><para>
 
