@@ -10,7 +10,10 @@ installation-guide (2011xxxx) UNRELEASED; urgency=low
   [ Joey Hess ]
   * Fix typo in example preseed. Closes: #612631
 
- -- Samuel Thibault <sthibault@debian.org>  Sun, 20 Feb 2011 20:51:10 +0100
+  [ Didier Raboud ]
+  * Document win32-loader as a possible boot method. Closes: #444017.
+
+ -- Samuel Thibault <sthibault@debian.org>  Sun, 20 Feb 2011 21:47:31 +0100
 
 installation-guide (20110122) unstable; urgency=low
 
